# browserid-ng

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.beads/: BID.db  issues.jsonl
.githooks/: pre-push
browserid-broker/: Cargo.toml
browserid-broker/src/: config.rs  crypto.rs  dns_fetcher.rs  error.rs  fallback_fetcher.rs  lib.rs  main.rs  routes.rs  state.rs  verifier.rs
browserid-broker/src/email/: console.rs  mod.rs  smtp.rs
browserid-broker/src/routes/: account.rs  auth.rs  cert.rs  email.rs  mod.rs  primary.rs  reset.rs  session.rs  test.rs  verify.rs  well_known.rs
browserid-broker/src/store/: memory.rs  mod.rs  models.rs  sqlite.rs
browserid-broker/static/: authentication_api.js  communication_iframe.html  demo.html  dialog.css  dialog.html  dialog.js  include.js  provisioning.js  provisioning_api.js  test.html
browserid-broker/static/common/js/: crypto-loader.js  network.js  storage.js  user.js
browserid-broker/static/common/js/lib/: jwcrypto-compat.js
browserid-broker/static/common/js/models/: network-context.js
browserid-broker/static/communication_iframe/: start.js
browserid-broker/static/relay/: index.html
browserid-broker/tests/: README.md  account_cancel_test.rs  address_info_primary_test.rs  address_info_test.rs  auth_with_assertion_test.rs  authentication_test.rs  cert_key_test.rs  cookie_session_security_test.rs  dns_fetcher_test.rs  email_addition_status_test.rs  fallback_fetcher_test.rs  forgotten_pass_test.rs  integration_test.rs  list_emails_wsapi_test.rs  logout_test.rs  password_length_test.rs  password_update_test.rs  primary_idp_integration_test.rs  registration_status_test.rs  remove_email_test.rs  schema_migration_test.rs  session_context_test.rs  stage_email_test.rs  verification_test.rs  verifier_dns_test.rs  verifier_test.rs  well_known_test.rs
browserid-broker/tests/common/: mod.rs
browserid-core/: Cargo.toml
browserid-core/src/: assertion.rs  certificate.rs  discovery.rs  dns.rs  error.rs  keys.rs  lib.rs
browserid-core/tests/: README.md  ca_test.rs  conformance_test.rs  discovery_test.rs  dns_record_test.rs  verifier_test.rs  well_known_test.rs
docs/: test-coverage-audit.md
docs/plans/: 2025-12-26-broker-api-design.md  2025-12-26-broker-implementation.md  2025-12-26-sqlite-store-design.md  2025-12-28-dns-discovery-design.md  2025-12-28-dns-discovery-impl.md  2025-12-29-primary-idp-implementation-plan.md  2025-12-29-primary-idp-support-design.md  test-porting-tracker.md
e2e-tests/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e-tests/fixtures/: test-helpers.ts
e2e-tests/pages/: dialog.ts
e2e-tests/tests/: cancel-account.spec.ts  change-password.spec.ts  dialog-loads.spec.ts  include-api.spec.ts  new-user-signup.spec.ts  primary-idp.spec.ts  remove-email.spec.ts  reset-password.spec.ts  returning-user.spec.ts  (+2 more)
