[package]
name = "browserid-broker"
description = "BrowserID-NG fallback identity provider (broker)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
browserid-core = { path = "../browserid-core" }
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bcrypt.workspace = true
tower-cookies.workspace = true
tower.workspace = true
uuid.workspace = true
rand.workspace = true
base64.workspace = true
tower-http = { version = "0.6", features = ["fs"] }
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
axum-test = "16"
tower = { workspace = true, features = ["util"] }
http = "1"
cookie = "0.18"
