[package]
name = "browserid-core"
description = "Core types and cryptography for BrowserID-NG"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
